--- a/src/Pages/Principal/HeaderBottom.css
+++ b/src/Pages/Principal/HeaderBottom.css
@@ -5,6 +5,7 @@
     justify-content: center;
     gap: 22em;
     height: 10vh;
+    min-height: 10vh;
     z-index: 1000;
     background-color: rgb(245, 242, 242);
     box-sizing: border-box;
