--- a/src/Pages/Registrarse/Registrarse.css
+++ b/src/Pages/Registrarse/Registrarse.css
@@ -8,13 +8,13 @@
     margin: 0;
 }
 
-.cards {
+.card {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     width: 20vw;
-    height: 40vh;
+    height: 70vh;
 }
 
 
