--- a/src/Pages/Registrarse/Registrarse.css
+++ b/src/Pages/Registrarse/Registrarse.css
@@ -6,15 +6,22 @@
     align-items: center;
     height: 100vh;
     margin: 0;
-}
-
-.card {
+  }
+  
+  .card {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-    width: 20vw;
-    height: 70vh;
+    transition: height 0.3s ease, width 0.3s ease;
+  }
+
+  .formulario {
+    height: 60vh;
+    width: 35vw;
+    position: relative;
+    margin-top: 5vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
 }
-
-
