--- a/src/Pages/InicioSesion/InicioSesion.css
+++ b/src/Pages/InicioSesion/InicioSesion.css
@@ -1,4 +1,30 @@
-.body {
+/* IniciarSesion.css */
+.login-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40vw;
+    height: 60vh;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    overflow: auto; 
+    
+}
+  
+  .login-box {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  
+  
+
+/* .body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     display: flex;
@@ -16,5 +42,5 @@
     width: 20vw;
     height: 45vh;
 }
-
+ */
 
