--- a/src/Pages/Principal/HeaderBottom.css
+++ b/src/Pages/Principal/HeaderBottom.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16em;
+  gap: 13em;
   height: 10vh;
   min-height: 10vh;
   z-index: 1000; 
@@ -24,8 +24,9 @@
 
 .iconos {
   height: 6vh;
-  width: 27vw;
+  width: 35vw;
   gap: 2em;
   display: flex;
   align-items: center;
+  justify-content: end;
 }
