--- a/src/Pages/Registrarse/Registrarse.css
+++ b/src/Pages/Registrarse/Registrarse.css
@@ -1,4 +1,4 @@
-.body {
+/* .body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     display: flex;
@@ -24,4 +24,50 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+} */
+
+/* RegistroUsuario.css */
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3); /* Fondo semi-transparente */
+}
+
+.card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35vw; /* Ajusta el ancho aquí */
+  height: 30vh; /* Ajusta la altura aquí */
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: auto; /* Permite desplazamiento si el contenido es mayor que el tamaño de la ventana */
+  transition: width 0.3s ease, height 0.3s ease; /* Transición suave para el tamaño */
+}
+
+.login {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+button {
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056b3;
 }
